filter options added

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,5 @@ org.gradle.configureondemand=true
 android.injected.testOnly=false
 
 # Search Base URL
-SEARCH_BASE_URL_DEV="https://itunes.apple.com/search/"
-SEARCH_BASE_URL_PROD="https://itunes.apple.com/search/"
+SEARCH_BASE_URL_DEV="https://itunes.apple.com"
+SEARCH_BASE_URL_PROD="https://itunes.apple.com"
