--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+
 }
+ext.deps = [:]
 
 android {
     compileSdkVersion 30
@@ -58,6 +60,8 @@ android {
 }
 
 dependencies {
+    apply plugin: 'androidx.navigation.safeargs'
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -67,6 +71,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
